# ta-automl

./: README.md  plan.md  pyproject.toml  smoke_test.py
docs/: CUSTOM_LOSS.md  CUSTOM_SEARCH.md  DEVELOPER_GUIDE.md  EXTENDING.md  PARAMETER_AWARE_SCREENING.md  TUTORIAL_ALGO_TRADING_WORKSHOP.md  TUTORIAL_CUSTOM_INDICATOR.md
ta_automl/: __init__.py  compat.py  config.py  main.py
ta_automl/backtest/: strategy.py
ta_automl/data/: fetcher.py
ta_automl/display/: traffic_light.py
ta_automl/gui/: __init__.py  app.py  developer.py  help_text.py  runner.py
ta_automl/optimization/: evaluator.py  flaml_search.py  loss.py  search.py  study.py
ta_automl/sdk/: __init__.py  combiners.py  indicators.py  plugins.py  scaffold.py  validate.py
ta_automl/signals/: auto_discover.py  binarizer.py  screener.py  tuner.py
